# image-gif

./: Cargo.toml
src/: common.rs  encoder.rs  lib.rs  traits.rs
src/reader/: decoder.rs  mod.rs
