[package]

name = "gif"
license = "MIT/Apache-2.0"
version = "0.10.0"
description = "GIF de- and encoder"
authors = ["nwin <nwin@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/PistonDevelopers/image-gif.git"
documentation = "http://www.piston.rs/image/gif/index.html"
homepage = "https://github.com/PistonDevelopers/image-gif"

exclude = [
    "tests/*",
    "gif-afl/*",
]

[dependencies]
lzw = { git = "https://github.com/roblabla/lzw" }
color_quant = { git = "https://github.com/roblabla/color_quant" }

[dev-dependencies]
glob = "0.2.10"

[features]
default = ["raii_no_panic"]

raii_no_panic = []
c_api = ["libc"]

[dependencies.libc]
version = "0.2.1"
optional = true
